+ Added permissions checking to timetracker:add and timetracker:edit . Permissions set in the useraccount where not properly enforced for the timetracker before.
+ Rewrote the settings functionality to work with a key/value table as the datastore. This makes extensibility easier.
+ Ported all database access from mysql_ to PDO. This became necessary because mysql_ will be deprecated in future versions of PHP. Also, PDO supports a plethora of databases which should make supporting other databases than mysql much easier than before. (Contributed by Mwirtz)
+ Ported install.php and update.php to also use PDO


Collabtive 0.7.6
+ Added Estonian translation
+ Fixed timetracker filtering
+ Fixed a problem in countLanguageStrings() that would throw warnings on the system admin page when there was an empty folder in the /language/ folder
+ Files can now be moved up in the folder hierarchy by dragging them onto the "folder up" icon / titlebar
+ Display the complete path of the folder in the add folder ("Parent folder") and add file ("folder") forms, instead of just the foldernames
+ Display the complete path in the titlebar of the file manager, instead of just the current folder
+ Filemanager can now be switched between Gridview (default) and listview (new)
+ Set sensible defaults for time formating in admin->system
+ Implemented asynchronous file upload, with real progress indicator (for browsers that can support it)
+ Removed open ID login option. it was based on a terribly outdated library that only supports openID 1.0, which possibly poses a security problem.
+ Improved file type checking for avatar uploads to prevent non-image files from being uploaded to the avatar directory. This improves security.
+ Removed some dead code paths from manageproject.php
+ Added a security check to install.php to prevent it from being used after Collabtive has already been installed.

Collabtive 0.7.5
+ Improved code comments